# phd-website

./: .gitattributes  README.md
.github/: dependabot.yml
.github/workflows/: analytics-server-ci.yaml  cd.yaml  ci.yaml  ddns-build-image.yaml  ddns-runner-ci.yaml  phd-website-ci.yaml  phd-website-deployment.yaml  recover-secrets.yaml  system-backupper.yaml  website-ci.yaml  website-deployment.yaml
backend-deploy/: README.md  docker-compose.yml  prometheus.yml  setup.sh
backend-deploy/grafana/: Analytics-Server.json  dashboards-provisioning.yaml
backend/backend-deploy/: README.md  docker-compose.yml  nginx.conf
backend/ddns-runner/: Cargo.toml  Dockerfile
backend/ddns-runner/ddns-runner/: .env-dev  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/ddns-runner/ddns-runner/jmeter/: ddns.jmx
backend/ddns-runner/ddns-runner/src/: config.rs  dotenv.rs  main.rs  prometheus_metrics.rs  system_metrics_task.rs  update_ip_task.rs
backend/ddns-runner/ddns-runner/src/duck_dns_client/: client.rs  errors.rs
backend/ddns-runner/ddns-runner/src/migrations/: errors.rs  migration_definition.rs  migration_runner.rs
backend/ddns-runner/ddns-runner/tools/: current-version.sh
backend/ddns-runner/duck-dns-server-mock/: Cargo.toml  Dockerfile
backend/ddns-runner/duck-dns-server-mock/src/: main.rs
backend/ddns-runner/src/: config.rs  duck_dns_client.rs  main.rs  prometheus_exporter.rs
backend/host-metrics/: Cargo.toml
backend/phd-website-analytics-server/: .dockerignore  .editorconfig  Dockerfile  README.md  build.gradle.kts
backend/phd-website-analytics-server/docker/: docker-compose.yaml  prometheus.yml
backend/phd-website-analytics-server/local-http/: session-establishing-protocol.sh
ddns-runner/: .dockerignore  .env-container-local  .env-dev  Cargo.toml  Dockerfile  README.md
ddns-runner/migrations/: 1.0.0--create-ip-update-results-table.sql  1.0.1--create_domain_table.sql  1.0.1--create_domains_table.sql
ddns-runner/src/: config.rs  handlers.rs  main.rs  prometheus_handler.rs  system_metrics_task.rs  update_ip_task.rs
ddns-runner/src/duck_dns_client/: client.rs  errors.rs
ddns-runner/src/migrations/: migration_entity.rs  mod.rs  semantic_version.rs
ddns-runner/tools/: current-version.sh
dev/backend-all-services-with-mock-duck-dns/: docker-compose.yml  nginx.conf
dev/backend-all-services-with-mock-duck-dns/grafana/: DDNS-Runner.json  prometheus-provisioning.yaml
duck-dns-server-mock/: Cargo.toml  Dockerfile
duck-dns-server-mock/src/: main.rs
lib/dotenv/: Cargo.toml
lib/dotenv/src/: dotenv.rs  lib.rs
lib/migrations/: Cargo.toml
lib/migrations/src/: lib.rs  migration_definition.rs  migration_entity.rs  migration_runner.rs  semantic_version.rs
phd-website-analytics-server/: build.gradle.kts  gradle.properties  settings.gradle.kts
phd-website-analytics-server/benchmark-reports/: parsing-implementations-benchmark.txt
phd-website-analytics-server/docker/: docker-compose.yaml  nginx.conf
phd-website-analytics-server/docs/adr/: 001_28-07-2025_parsing-algorithm.md
phd-website-analytics-server/gradle/: libs.versions.toml
phd-website-analytics-server/local-http/: session-establishing-protocol.sh
phd-website-analytics-server/tools/: release.sh
phd_website/: .gitignore  README.md  build.yaml  pubspec.yaml
phd_website/.github/workflows/: ci.yaml
phd_website/lib/: constants.dart  main.dart  responsive_transition_page.dart  text_theme_service.dart
phd_website/linux/: CMakeLists.txt  my_application.cc
phd_website/scripts/: README.md
phd_website/test/: tester_extensions.dart  widget_test.dart
phd_website/tools/: create-release.sh  run-build-on-python-server.sh
phd_website/web/: index.html  manifest.json
phd_website/windows/: CMakeLists.txt
system-backupper/: Cargo.toml  Dockerfile  README.md
system-backupper/docs/adr/: 001_22-10-2025_ubuntu_as_base_docker_image.md
system-backupper/src/: app_config.rs  connection_pool.rs  file_system_repositories.rs  lock.rs  main.rs
system-backupper/src/endpoints/: api.rs  backups_create.rs  backups_read.rs  configured_targets_check_is_healthy.rs  configured_targets_read.rs  configured_targets_restore_backup.rs  endpoints.rs  healthy.rs  mod.rs
system-backupper/src/jobs/: cron_jobs.rs  mod.rs  mongodb_job.rs  scheduled_backup_job.rs
system-backupper/src/model/: cyclick_backup.rs  repository.rs
system-backupper/src/services/: backup_strategy.rs  backupping_service.rs  errors.rs  mod.rs
system-backupper/testing/e2e/: docker-compose.yml  e2e_test_mongodb.py  e2e_test_postgres.py  requirements.txt
system-backupper/tools/: current-version.sh
system_backuper/: .env-blueprint  .gitignore  Cargo.toml
system_backuper/migrations/: 1.sql
system_backuper/src/: app_config.rs  connection_pool.rs  endpoints.rs  file_system_repositories.rs  lock.rs  main.rs  mongodb.rs  postgres.rs  process.rs
system_backuper/src/backup_metadata/: mod.rs  model.rs  repository.rs
system_backuper/src/endpoints/: api.rs  configured_targets_read_endpoint.rs  endpoints.rs  mod.rs  mongodb_create_backup_endpoint.rs  mongodb_read_backups_endpoint.rs  mongodb_restore_backup_endpoint.rs
system_backuper/src/jobs/: mod.rs  mongodb_job.rs
system_backuper/src/model/: backup_metadata.rs  mod.rs  repository.rs
system_backuper/src/mongodb/: backupping_service.rs  mod.rs
system_backuper/src/postgres/: mod.rs
system_backuper/src/services/: backup_strategy.rs  backupping_service.rs  errors.rs  mod.rs  mongodb.rs  postgres.rs
system_backuper/testing/: spinup-local-environment.sh
system_backuper/testing/mongo/: testCollection.json  testCollectionWithIndex.json
system_backuper/testing/postgres/: test-data.sql
(+214 files in other folders)
