[package]
name = "ddns-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { path = "../lib/dotenv" }
migrations = { path = "../lib/migrations", features = [ "postgres" ] }
# TODO: minimize the feature list
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13" }
log = "0.4.29"
env_logger = "0.11.9"
prometheus = "0.14.0"
sysinfo = "0.38.2"
tokio-postgres = "0.7.16"
regex = "1.12.3"
sha2 = "0.10.8"
signal-hook = "0.4.3"
anyhow = "1.0.102"
axum = "0.8.8"

[dev-dependencies]
axum-test = "18.6.0"
