[package]
name = "ddns-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { path = "../lib/dotenv" }
migrations = { path = "../lib/migrations", features = [ "postgres" ] }
# TODO: minimize the feature list
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13" }
log = "0.4.29"
env_logger = "0.11.10"
prometheus = "0.14.0"
sysinfo = "0.38.4"
tokio-postgres = "0.7.17"
regex = "1.10.6"
sha2 = "0.11.0"
signal-hook = "0.4.4"
anyhow = "1.0.102"
axum = "0.8.9"

[dev-dependencies]
axum-test = "18.6.0"
