[package]
name = "duck-dns-server-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  { version = "0.8.6", features = ["macros"] }
rand = "0.8.5"
tokio = { version = "1.48.0", features = ["full"] }
