[package]
name = "duck-dns-server-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  { version = "0.8.8", features = ["macros"] }
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
