[package]
name = "system-backupper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.39", features = ["serde"] }
cron = "0.15.0"
dotenv = { path = '../lib/dotenv' }
migrations = { path = '../lib/migrations', features = ["sqlite"] }
env_logger = "0.11.6"
flate2 = "1.1.0"
iron = "0.6.1"
log = "0.4.26"
params = "0.8.0"
rand = "0.9.0"
router = "0.6.0"
rusqlite = { version = "0.34.0", features = ["chrono", "bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
signal-hook = "0.3.17"
strum = { version = "0.27.1", features = ["derive"] }
url = "2.5.4"
tokio = { version = "1.44.1", features = ["full"] }
