[package]
name = "system_backuper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = { path = '../lib/dotenv' }
env_logger = "0.11.6"
flate2 = "1.1.0"
iron = "0.6.1"
log = "0.4.26"
params = "0.8.0"
rand = "0.9.0"
router = "0.6.0"
rusqlite = { version = "0.33.0", features = ["chrono", "bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive"] }
url = "2.5.4"
