[package]
name = "ddns-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6.0"
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.2"
prometheus = "0.13.3"
