[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
log = "0.4.26"
regex = "1.11.1"
rusqlite = { version = "0.34.0", features = ["bundled"], optional = true }
sha2 = "0.10.8"
tokio-postgres = { version = "0.7.13", optional = true }

[features]
default = ["sqlite", "postgres"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:tokio-postgres"]
