[package]
name = "ddns-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
iron = "0.6.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.2"
prometheus = "0.13.3"
router = "0.6.0"
sysinfo = "0.31.2"
